(🪲fix): overlapping element problem fixied on footer

--- a/src/components/accordion/accordion.scss
+++ b/src/components/accordion/accordion.scss
@@ -1,6 +1,6 @@
 .helper {
   width: 100%;
-  height: 50vh;
+  height: 100vh;
 }
 
 .container {
